# gasto_deputados

./: .gitignore  hello.py  pyproject.toml
.github/workflows/: pylint.yml
infra/: .terraform.lock.hcl  main.tf  s3.tf
src/ingestion/: main.py
src/utils/: main.py
test/: test_utils.py
