[project]
name = "gasto-deputados"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "awswrangler>=3.11.0",
    "pylint>=3.3.3",
    "pytest>=8.3.4",
    "pytest-mock>=3.14.0",
    "requests>=2.32.3",
]
[tool.pylint."MESSAGES CONTROL"]
disable = ["C"]  # Disables all convention messages

[tool.pylint."BASIC"]
good-names = ["i", "j", "k", "x", "y", "z"]

[tool.pylint."FORMAT"]
max-line-length = 100  
